--- a/app/WebContent/index.xhtml
+++ b/app/WebContent/index.xhtml
@@ -12,7 +12,7 @@ xmlns:h="http://java.sun.com/jsf/html">
 	
 		<h:outputLabel value="Nome ->" />
 		<h:inputText value="#{inicioBean.nome}"/>
-		<h:commandButton  action="#{inicioBean.enviar}" value="Enviar" />
+		<h:commandButton  action="#{inicioBean.enviar}" value="Cadastrar" />
 	</h:form>
 
 </h:body>
