Mudado o nome do html "index.xhtml" para "Index.xhtml" e adicionado uma tag h1 de teste.

--- a/app/WebContent/Index.xhtml
+++ b/app/WebContent/Index.xhtml
@@ -9,10 +9,11 @@ xmlns:h="http://java.sun.com/jsf/html">
 <h:body>
 
 	<h:form>
-	
+		<h1>TESTE</h1>
 		<h:outputLabel value="Nome ->" />
 		<h:inputText value="#{inicioBean.nome}"/>
 		<h:commandButton  action="#{inicioBean.enviar}" value="Cadastrar" />
+		
 	</h:form>
 
 </h:body>
